--- a/app/shared/footer/footerView.html
+++ b/app/shared/footer/footerView.html
@@ -1,5 +1,5 @@
-<footer class="footer">
+<footer class="footer panel-footer">
     <div class="container">
-        
+        footer text
     </div>
 </footer>
