--- a/app/shared/menu/menuView.html
+++ b/app/shared/menu/menuView.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-default navbar-fixed-top">
+<header class="navbar navbar-default">
 	<div class="navbar-inner">
 		<div class="container">
 			<nav>
