--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<script src="app/app.router.js"></script>
 		<script src="app/app.module.js"></script>
 	</head>
-	<body ng-app="aas">
+	<body ng-app="aas" class="panel">
 		<ng-include src="'app/shared/menu/menuView.html'"></ng-include>
 
 		<div ui-view>
